2014-09-10  Carl Hetherington  <cth@carlh.net>

	* Allow DCP names to be created using the ISDCF template and then
	edited afterwards (#401).

	* Fix hidden advanced preferences button in some locales.

2014-09-08  Carl Hetherington  <cth@carlh.net>

	* Version 1.73.4 released.

2014-09-08  Carl Hetherington  <cth@carlh.net>

	* Fix failure to load Targa files.

2014-09-07  Carl Hetherington  <cth@carlh.net>

	* Version 1.73.3 released.

2014-09-07  Carl Hetherington  <cth@carlh.net>

	* Put no stretch / no scale in the set of choices for default
	scale to.

	* Fix a few bad fuzzy translations from the preferences dialog.

2014-09-03  Carl Hetherington  <cth@carlh.net>

	* Version 1.73.2 released.

2014-09-03  Carl Hetherington  <cth@carlh.net>

	* Fix server certificate downloads on OS X (#376).

2014-09-02  Carl Hetherington  <cth@carlh.net>

	* Improve behaviour of batch converter window when it is shrunk (#338).

2014-09-01  Carl Hetherington  <cth@carlh.net>

	* Version 1.73.1 released.

2014-08-31  Carl Hetherington  <cth@carlh.net>

	* Remove configurable CPL <Creator> and use "DCP-o-matic (version) (git)"
	instead.

	* Fix lack of i18n of strings from src/lib/po on OS X.

	* Give a hint when content and container aspect ratios are not
	the same (#392).

	* Add "copy" button to colour conversion presets editor (#399).

	* Allow drag-and-drop of files onto the content list (#395).

2014-08-29  Carl Hetherington  <cth@carlh.net>

	* Some improvements to the manual.

2014-08-26  Carl Hetherington  <cth@carlh.net>

	* Version 1.73.0 released.

2014-08-25  Carl Hetherington  <cth@carlh.net>

	* Basic recent files list in the File menu.

2014-08-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.72.12 released.

2014-08-23  Carl Hetherington  <cth@carlh.net>

	* Revert previous use of AVFormatContext::start_time when
	computing the length of video.  I think this is wrong, and
	causes bits to be missed off the end of videos (and other
	problems).
